--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,12 @@
     "jsx": "react",
     "allowJs": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "typeRoots": ["./src/types", "./node_modules/@types"],
   "include": ["src/**/*", "editorjs.paragraph.d.ts"],
